# SecureVault

./: README.md  index.html  package-lock.json  package.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs
src-tauri/src/commands/: auth.rs  files.rs  mod.rs  notes.rs
src-tauri/src/models/: file.rs  mod.rs  note.rs
src-tauri/src/services/: crypto.rs  database.rs  mod.rs  storage.rs
src/components/layout/: AppLayout.tsx  Sidebar.tsx
src/features/auth/: Dashboard.tsx  MasterPassword.tsx  SetupPassword.tsx
src/features/files/: FileList.tsx
src/features/notes/: NoteEditor.tsx  NoteList.tsx  NotesPage.tsx
src/i18n/: ar.json  en.json  index.ts
src/lib/: tauri.ts
src/stores/: appStore.ts
