[package]
name = "secure-vault"
version = "0.1.0"
description = "Encrypted file storage and secure notes"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

# Encryption
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
